methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:5: error: ')' expected but ';' found.
def ligne(c1:Color;c2:Color) {
                  ^PatternPicture:5: error: ';' expected but ')' found.
def ligne(c1:Color;c2:Color) {
                           ^